--- a/InnerSys/Web.config
+++ b/InnerSys/Web.config
@@ -70,7 +70,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="OrderEntities" connectionString="metadata=res://*/Db.Order.csdl|res://*/Db.Order.ssdl|res://*/Db.Order.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=127.0.0.1;initial catalog=Order;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="OrderEntities" connectionString="metadata=res://*/Db.Order.csdl|res://*/Db.Order.ssdl|res://*/Db.Order.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=127.0.0.1;initial catalog=Order;persist security info=True;user id=User;password=1234;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
